# Edulatform.ai

./: .env.example  .gitignore  CLAUDE.md  README.md  STRUCTURE.md  demo.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  pyproject.toml
.claude/agents/: backend-engineer.md  core-engineer.md  dataviz-designer.md  devops-engineer.md  frontend-engineer.md  interaction-designer.md  landing-designer.md  ml-engineer.md  motion-designer.md  product-analyst.md  qa-engineer.md  security-engineer.md  tech-lead.md  ui-designer.md
.claude/skills/: code-review.md  debug-service.md  deploy-checklist.md  migration-safety.md  new-endpoint.md  new-frontend-page.md  tdd-backend.md
.github/workflows/: ci.yml
apps/buyer/: .env.example  CLAUDE.md  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
apps/seller/: next.config.ts  package.json  pnpm-lock.yaml
deploy/docker/: learning.Dockerfile  mcp.Dockerfile  notification.Dockerfile  payment.Dockerfile  rag.Dockerfile  seed.Dockerfile
deploy/scripts/: backup-all-dbs.sh  list-backups.sh  restore-db.sh
deploy/staging/: .env.staging.example
docs/: PRODUCT-SCOPE.md  TECHNICAL-OVERVIEW.md
docs/architecture/: 01-SYSTEM-OVERVIEW.md  02-API-REFERENCE.md  03-DATABASE-SCHEMAS.md  04-AUTH-FLOW.md  05-INFRASTRUCTURE.md  06-SHARED-LIBRARY.md
docs/audits/: 2026-03-04-claude-md-compliance.md
docs/decisions/: 001-clean-architecture.md  002-database-per-service.md  003-python-vs-rust.md  004-b2b-pivot.md  005-worktree-isolation.md  template.md
docs/goals/: 00-ROADMAP.md  01-PRODUCT-VISION.md  02-ARCHITECTURE-PRINCIPLES.md  03-INFRASTRUCTURE.md  04-DOMAINS.md  05-DATA-STRATEGY.md  06-SECURITY.md  07-VIDEO-MEDIA.md  08-MONOREPO-DX.md  09-OBSERVABILITY.md  10-FRONTEND.md  11-AI-AGENT-STANDARDS.md  12-AGENTIC-PIVOT.md
docs/phases/: PHASE-0-FOUNDATION.md  PHASE-1-LAUNCH.md  PHASE-2-LEARNING-INTELLIGENCE.md  PHASE-3-GROWTH.md  PHASE-4-SCALE.md  PHASE-5-DEMO.md
docs/plans/: 2026-03-05-b2b-knowledge-platform-design.md
docs/versions/: v1.0.0-b2b.md  v1.1.0-demo-ready.md
libs/py/common/: CLAUDE.md  pyproject.toml
libs/py/common/common/: __init__.py  logging.py  nats.py  rate_limit.py  sentry.py
libs/py/common/tests/: test_logging.py  test_nats.py
proto/: README.md
services/py/rag/: CLAUDE.md  pyproject.toml
services/py/rag/app/: config.py  main.py
services/py/rag/app/adapters/: github_adapter.py
services/py/rag/app/domain/: document.py  embedding.py  extraction.py  github_repo.py  knowledge_base.py  search.py
services/py/rag/app/repositories/: concept_store.py  document_repository.py  embedding_client.py  github_repo_repository.py  qdrant_store.py  search_repository.py  stub_vector_store.py  vector_store.py
services/py/rag/app/routes/: concept_routes.py  github_connect_routes.py  github_routes.py  ingestion_routes.py  knowledge_base_routes.py  search_routes.py
services/py/rag/app/services/: chunker.py  extraction_service.py  github_connect_service.py  ingestion_service.py  knowledge_base_service.py  search_service.py
services/py/rag/migrations/: 001_init.sql  002_concepts.sql  004_github_repos.sql
services/py/rag/tests/: conftest.py  test_chunker.py  test_concept_routes.py  test_concept_store.py  test_config.py  test_document_repository.py  test_embedding_client.py  test_extraction_service.py  test_github_adapter.py  test_github_connect_routes.py  test_github_connect_service.py  test_github_routes.py  test_ingestion_routes.py  test_ingestion_service.py  test_knowledge_base_routes.py  test_knowledge_base_service.py  test_main.py  test_migrations.py  test_search_repository.py  test_search_routes.py  test_search_service.py  test_vector_store.py
services/rs/api-gateway/: Cargo.toml  Dockerfile
services/rs/api-gateway/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  proxy.rs
services/rs/api-gateway/src/middleware/: auth_middleware.rs  cors.rs  mod.rs  rate_limit.rs  request_logger.rs
services/rs/api-gateway/tests/: auth_test.rs  cors_test.rs  health_test.rs  proxy_test.rs  rate_limit_test.rs  request_logger_test.rs
services/rs/embedding-orchestrator/: Cargo.toml  Dockerfile
services/rs/embedding-orchestrator/src/: config.rs  embedder.rs  error.rs  lib.rs  main.rs  routes.rs
services/rs/search/: Cargo.toml
services/rs/search/src/: config.rs  error.rs  index.rs  main.rs  routes.rs
services/rs/ws-gateway/: Cargo.toml  Dockerfile
services/rs/ws-gateway/src/: auth.rs  config.rs  connection.rs  error.rs  lib.rs  main.rs  messages.rs  routes.rs
services/rs/ws-gateway/tests/: integration.rs
tools/demo/: demo.sh
tools/hooks/: check-clean-arch.sh  check-frontend-changes.sh  check-python-changes.sh  (+1 more)
tools/seed/: pyproject.toml  seed.py
tools/seed/demo_documents/: api_design_guide.md  python_best_practices.md  rust_ownership.md  system_design.md  typescript_patterns.md
tools/seed/tests/: conftest.py  test_seed_demo.py  test_seed_rag_documents.py
(+664 files in other folders)
