[project]
name = "eduplatform"
version = "0.1.0"
requires-python = ">=3.12"

[tool.uv.workspace]
members = [
    "libs/py/common",
    "services/py/identity",
    "services/py/course",
    "services/py/enrollment",
    "services/py/payment",
    "services/py/notification",
    "services/py/ai",
    "services/py/learning",
    "services/py/rag",
    "services/py/mcp",
    "tools/seed",
    "tools/orchestrator",
]
