[project]
name = "common"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "asyncpg>=0.30",
    "pydantic-settings>=2.7",
    "pyjwt>=2.10",
    "prometheus-client>=0.21",
    "structlog>=24.1",
    "sentry-sdk[fastapi]>=2.0",
    "nats-py>=2.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
